--- a/src/pacc.lpi
+++ b/src/pacc.lpi
@@ -31,7 +31,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="25">
+    <Units Count="27">
       <Unit0>
         <Filename Value="pacc.dpr"/>
         <IsPartOfProject Value="True"/>
@@ -132,6 +132,14 @@
         <Filename Value="PACC.inc"/>
         <IsPartOfProject Value="True"/>
       </Unit24>
+      <Unit25>
+        <Filename Value="PACCLinker_COFF_PE_LCIDToCodePageLookUpTable.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit25>
+      <Unit26>
+        <Filename Value="PACCLinker_COFF_PE.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit26>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
